# cgengine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  build.sh  run.sh
projects/katamari/: main.cpp
projects/katamari/data/: BallController.cpp  BallController.h  Follow.cpp  Follow.h  KatamariScene.cpp  KatamariScene.h  Spawner.cpp  Spawner.h
projects/planets/: main.cpp
projects/planets/scenes/: Orbit.cpp  Orbit.h  PlanetScene.cpp  PlanetScene.h
projects/pong/: main.cpp
projects/pong/scenes/: Ball.cpp  Ball.h  PaddleController.cpp  PaddleController.h  PongScene.cpp  PongScene.h
shaders/: tri_mesh_ssbo.vert  tri_mesh_ssbo_vertex.vert
src/: allocstructs.cpp  allocstructs.h  cameracontroller.cpp  cameracontroller.h  crc32.h  deletionqueue.cpp  deletionqueue.h  devicesingleton.h  error.cpp  error.h  fence.cpp  fence.h  frame.cpp  frame.h  freecamera.cpp  freecamera.h  gpustructs.h  literals.h  material.cpp  material.h  orbitalcamera.cpp  orbitalcamera.h  random.cpp  random.h  scene.cpp  scene.h  singleton.h  timer.cpp  timer.h  vector.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_operations.cpp  vk_operations.h  vk_textures.cpp  vk_textures.h  (+3 more)
src/events/: eventlistener.cpp  eventlistener.h  eventman.cpp  eventman.h  mouse.h
src/meshes/: sphere.cpp  sphere.h
src/objects/: level.cpp  level.h  object.cpp  object.h
src/objects/components/: base.h  camera.cpp  camera.h  collisionphysics.cpp  collisionphysics.h  controllerphysics.h  freecamera.cpp  freecamera.h  hierarchy.cpp  hierarchy.h  orbitalcamera.cpp  orbitalcamera.h  render.h  rigidbody.cpp  rigidbody.h  ssbo.h  tag.h  transform.cpp  transform.h
src/physics/: dynamiccontroller.cpp  dynamiccontroller.h  physicsman.cpp  physicsman.h
src/platform/: gamepadconversion.cpp  gamepadconversion.h  gamepadman.cpp  gamepadman.h  keyconversion.cpp  keyconversion.h  platform.cpp  window.cpp  window.h
src/update/: fixedupdate.cpp  update.h
